--- a/.gitignore
+++ b/.gitignore
@@ -29,7 +29,9 @@ wheels/
 # Data files
 # *.json
 # *.xlsx
-*.db
+results/benchmark_results_gpu1.db
+results/benchmark_results_gpu2.db
+results/benchmark_results_mac.db
 
 # Logs
 *.log
